Okay fixed the alignment of the blog post in the main container/section. Oh and make the paragraph text a little bigger as it seemed a bit too small before.

--- a/css/layout.css
+++ b/css/layout.css
@@ -33,3 +33,11 @@ body {
   text-align: center;
   height: 50px;
 }
+
+.blog-post p{
+  text-align: justify;
+}
+
+p {
+  font-size: medium;
+}
